--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -49,7 +49,7 @@ http {
 
   server {
     listen 80;
-    server_name stf.wirecard;
+    server_name wd.openstf;
     keepalive_timeout 70;
     root /dev/null;
 
